[package]
name = "transaction-engine"
version = "0.1.0"
edition = "2021"
default-run = "transaction-engine"

[build-dependencies]

[dependencies]
thiserror = "2.0.3"
clap = { version = "4.5.21", features = ["derive"] }
log = "0.4.22"
csv = "1.3.1"
serde = { version = "1.0.215", features = ["derive"] }
env_logger = "0.11.5"
rand = "0.8.5"
rand_derive = "0.5.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
chrono = "0.4"

[[bin]]
name = "transaction-engine"
path = "src/main.rs"

[[bin]]
name = "generate-test-data"
path = "src/generator.rs"
